infra/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ecocheck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: docker.io/darkata/ecocheck-frontend:latest
          imagePullPolicy: IfNotPresent
          command:
            - node
            - apps/frontend/server.js
          ports:
            - containerPort: 3000
