infra/k8s/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: ecocheck
spec:
  selector:
    app: alertmanager
  ports:
    - port: 9093
      targetPort: 9093
